# projeto

./: README.md  analise.md  implementacao.md  uc01.md
code/: CMakeLists.txt  README.md  graficobarras.cpp  graficobarras.h  graficolinha.cpp  graficolinha.h  graficosetores.cpp  graficosetores.h  imagens.qrc  janelaprincipal.cpp  janelaprincipal.h  main.cpp
